<resources>
    <string name="app_name">MyNoteApp</string>
    <string name="spiice">Spiice</string>
    <string name="discover_the_platform">Discover the platform</string>
    <string name="login">You have an account ? Log-in</string>
    <string name="second_text">Find projects from companies everywhere in the word</string>
    <string name="skip">Skip</string>
    <string name="log_in">Log-in</string>
    <string name="return_to_sign_up">Return to Sign-up</string>
    <string name="sign_up_down_text">You have an account ? Log-in</string>
    <string name="sign_up">Sign-up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="work_hard_and_level_up">Work hard and level up!</string>
    <string name="enjoy_your_progess">Enjoy your progess!</string>
    <string name="logout">Logout</string>
    <string name="add_new">Add new</string>
    <string name="back">Back</string>
    <string name="add_note">Add note</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="add">Add</string>
    <string name="you_have_an_account_log_in" />
    <string name="you_have_an_account_log_in1">You have an account ? Log-in</string>
    <string name="log_in1">Log-in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_projects_from_companies_everywhere_in_the_word">Find projects from companies everywhere in the word</string>
    <string name="work_hard_and_level_up1">Work hard and level up!</string>
    <string name="enjoy_your_progess1">Enjoy your progess!</string>
    <string name="e_mail">E-mail</string>
    <string name="last_name1">Last Name</string>
    <string name="sign_up2">Sign-up</string>
    <string name="first_name1">First Name</string>
    <string name="you_have_an_account_log_in2">You have an account ? Log-in</string>
    <string name="sign_up3">Sign-up</string>
    <string name="log_in2">Log-in</string>
    <string name="log_in3">Log-in</string>
    <string name="return_to_sign_up1">Return to Sign-up</string>
    <string name="all_notes">All Notes</string>
    <string name="search">Search</string>
    <string name="add_note1">Add Note</string>
    <string name="add1">Add</string>
    <string name="message1">Message</string>
    <string name="title1">Title</string>
    <string name="profile">Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="mergen_bayramov">Mergen Bayramov</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="_64_notes">64 notes</string>
    <string name="logout1">Logout</string>
    <string name="home">home</string>
    <string name="note_not_saved" />
</resources>