<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profileFragments.ProfileFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="173dp"
        android:layout_height="52dp"
        android:text="@string/profile"
        android:textAlignment="viewStart"
        android:textColor="@color/text_color"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="36dp" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="163dp"
        android:layout_height="58dp"
        android:text="@string/delete_profile"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="232dp"
        tools:layout_editor_absoluteY="102dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="172dp"
        android:layout_height="60dp"
        android:text="@string/mergen_bayramov"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="104dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:text="@string/_64_notes"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="204dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="157dp"
        android:layout_height="43dp"
        android:text="@string/delete_all_notes"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="232dp"
        tools:layout_editor_absoluteY="203dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="161dp"
        android:layout_height="48dp"
        android:text="@string/logout1"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="277dp" />

</android.support.constraint.ConstraintLayout>