<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragments.LogInFragment"
    android:background="@drawable/bubbles1">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="359dp"
        android:layout_height="293dp"
        android:src="@drawable/blurbackground"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="96dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="169dp"
        android:layout_height="56dp"
        android:text="@string/log_in2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="96dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="248dp"
        android:layout_height="61dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/e_mail"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="180dp" />


    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="266dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="269dp"
        android:layout_height="62dp"
        android:background="@drawable/bottonbackground"
        android:text="@string/log_in3"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="535dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="272dp"
        android:layout_height="54dp"
        android:text="@string/return_to_sign_up1"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="607dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>