<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.FirstOnboardingFragment"
    android:background="@drawable/bubbles1">


    <TextView
        android:id="@+id/textView"
        android:layout_width="278dp"
        android:layout_height="138dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="64dp"
        android:text="@string/spiice"
        android:textAlignment="center"
        android:textColor="@color/spiice"
        android:textSize="96sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/discovery_button"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:background="@drawable/bottonbackground"
        android:text="@string/discover_the_platform"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="542dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="303dp"
        android:layout_height="57dp"
        android:text="@string/you_have_an_account_log_in1"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="602dp"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>