<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles3"
    tools:context=".ui.ThirdOnboardingFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="305dp"
        android:layout_height="555dp"
        android:src="@drawable/levelup"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="140dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="116dp"
        android:layout_height="48dp"
        android:text="@string/spiice"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="74dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="58dp"
        android:layout_height="30dp"
        android:text="@string/skip"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="36dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="275dp"
        android:layout_height="54dp"
        android:text="@string/work_hard_and_level_up"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="555dp" />
</android.support.constraint.ConstraintLayout>